--- a/css/style.css
+++ b/css/style.css
@@ -183,10 +183,10 @@ main {
 
 /* === Header Typography === */
 
-.left .subtitle {
+.left h2.subtitle {
   font-size: 1.75rem;
   font-style: italic;
-  font-weight: 500;
+  font-weight: 600;
   color: var(--white);
   margin: 0.5rem 0;
   line-height: 1.2;
