--- a/css/style.css
+++ b/css/style.css
@@ -203,6 +203,10 @@ main {
 .left h1 a {
   color: var(--white);
   text-decoration: none;
+  text-shadow: 2px 2px 0 var(--accent-green);
+  transition:
+    color 0.3s ease,
+    text-shadow 0.3s ease;
 }
 
 .left h1 a:visited {
@@ -213,11 +217,7 @@ main {
 .left h1 a:hover,
 .left h1 a:focus {
   color: var(--accent-green);
-  /* Turn text green */
-  text-decoration: none;
-  /* Remove underline */
-  outline: none;
-  /* Remove green outline box */
+  text-shadow: none;
 }
 
 /* === Navigation === */
