--- a/css/style.css
+++ b/css/style.css
@@ -195,7 +195,7 @@ main {
 .left h1 {
   font-size: 2.5rem;
   font-weight: 700;
-  color: var(--white);
+  color: var(--accent-green);
   margin: 0.5rem 0;
   line-height: 1.1;
 }
