--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@
   --text-dark: #010101;
   --text-light: #333;
   --text-muted: #666;
-  --white: #f1edea;
+  --white: #edebed;
 
   /* Spacing */
   --header-padding: 2rem 3rem;
